name:                hackerrank
version:             0.1.0.0
synopsis:            Learning Haskell
description:         My solutions for HackerRank tasks in Haskell
homepage:            https://github.com/zuoqin/hackerrank#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Zorchenkov
maintainer:          zorchenkov@gmail.com
copyright:           2016 Zorchenkov
category:            Study
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
IsFibo
library
  hs-source-dirs:      src
  exposed-modules:     MergeList,PointsOnaLine,FillingJars,SherlockAndProbability,RectangularGame,SpecialMultiple,IsFibo,RussianPeasantExponentiation,TailorShop
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable hackerrank-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hackerrank
                     , containers
  default-language:    Haskell2010

test-suite hackerrank-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hackerrank
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hackerrank
